<resources>
    <string name="app_name">Expenseable</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_your_credential_to_continue">Enter your credential to continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="arrow_back_icon">Arrow back icon</string>
    <string name="create_account">Create account</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset password</string>
    <string name="send">Send</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="transactions">Transactions</string>
    <string name="add_icon">Add icon</string>
    <string name="no_transactions">No Transactions</string>
    <string name="sign_out_icon">Sign out icon</string>
    <string name="_0">$ 0</string>
    <string name="create_transaction">Create transaction</string>
    <string name="transaction_title">Transaction title</string>
    <string name="transaction_amount">Transaction amount</string>
    <string name="transaction_type">Transaction type</string>
    <string name="save">Save</string>
</resources>